@@ -4,6 +4,7 @@
 BZFlag 1.10.4
 -------------
 
+* allow multiple team flags per team thru -c 5 - Dave Brosius
 * -maxidle handles idle / paused players the same - Frank Thilo
 * Added optional building density to random ctf map - Sean Morrison
 * Add pause time to /idlestats - Sean Morrison
